--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
   "author": "@filoxo",
   "license": "MIT",
   "dependencies": {
+    "lodash.isequal": "^4.5.0",
+    "lodash.uniqwith": "^4.5.0",
     "webpack": "^5.5.0"
   },
   "devDependencies": {
     "jest": "^26.6.3",
     "webpack-cli": "^4.2.0"
+  },
+  "resolutions": {
+    "browserslist": "4.15.0"
   }
 }
