--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "files": [
-    "index.js"
+    "index.js",
+    "visualize.js",
+    "index.html"
   ],
   "scripts": {
     "test": "jest",
