--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "lodash.isequal": "^4.5.0",
     "lodash.uniqwith": "^4.5.0",
+    "open": "^7.3.0",
     "webpack": "^5.5.0"
   },
   "devDependencies": {
