--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "license": "MIT",
   "dependencies": {
     "fastify": "^3.0.0",
+    "fastify-autoload": "^3.3.1",
     "fastify-cli": "^2.7.0",
     "fastify-mongodb": "^2.0.1",
     "fastify-plugin": "^3.0.0",
-    "fastify-autoload": "^3.3.1"
+    "fastify-sse-v2": "^2.0.3",
+    "lodash.isequal": "^4.5.0",
+    "lodash.uniqwith": "^4.5.0"
   },
   "directories": {
     "test": "test"
