--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "event-iterator": "^2.0.0",
     "fastify": "^3.0.0",
     "fastify-cli": "^2.7.0",
+    "fastify-mongodb": "^2.0.1",
     "fastify-plugin": "^3.0.0",
     "fastify-sse-v2": "^2.0.3",
     "lodash.isequal": "^4.5.0",
