Settup plugin-webpack tests as a lerna package

--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,7 @@
 {
   "packages": [
-    "packages/*"
+    "packages/*",
+    "packages/plugin-webpack/test/*"
   ],
   "npmClient": "yarn",
   "version": "independent"
