Prettier config and format

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -26,5 +26,10 @@
     "tap": "^15.0.9"
   },
   "keywords": [],
-  "description": ""
+  "description": "",
+  "prettier": {
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": true
+  }
 }
