Multistage dockerfile for better build caching

--- a/packages/server/Dockerfile
+++ b/packages/server/Dockerfile
@@ -1,13 +1,15 @@
-FROM node:latest
+FROM node:14-slim as build
+WORKDIR /www
+COPY package.json yarn.lock ./
+RUN yarn install  --production --frozen-lockfile
+COPY . /www
 
-# Create app directory
-WORKDIR /usr/src/app
-
-# Bundle app source
-COPY . .
-RUN yarn install
-# If you are building your code for production
-# RUN npm ci --only=production
-
-EXPOSE 3000
-CMD [ "yarn", "start" ]
+FROM node:14-slim as release
+WORKDIR /www
+COPY --from=build /www /www
+USER node
+ARG container_port=3000
+ENV PORT=$container_port
+ENV NODE_ENV=production
+EXPOSE $PORT
+CMD ["node_modules/.bin/fastify", "start", "app.js"]
