--- a/packages/plugin-webpack/package.json
+++ b/packages/plugin-webpack/package.json
@@ -11,7 +11,7 @@
     "test": "jest",
     "stats": "webpack --json stats.json"
   },
-  "author": "@filoxo",
+  "authors": ["filoxo", "TheMcMurder"],
   "license": "MIT",
   "dependencies": {
     "lodash.isequal": "^4.5.0",
