--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,7 +10,7 @@
     "test": "tap test/**/*.test.js",
     "dev": "fastify start -w -l info -P app.js"
   },
-  "author": "@filoxo",
+  "authors": ["filoxo", "TheMcMurder"],
   "license": "MIT",
   "dependencies": {
     "event-iterator": "^2.0.0",
